--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Text Hover Effects | Demo </title>
+<link href="https://fonts.googleapis.com/css?family=Aleo|Roboto" rel="stylesheet">    <title>Text Hover Effects | Demo </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
